<resources>
    <string name="app_name">Read It To Me</string>
    <string name="button_save">Save</string>
    <string name="button_load">Load</string>
    <string name="button_import">Import</string>
    <string name="button_toggle_shake">Shake</string>
    <string name="button_voice">Voice</string>
    <string name="button_language">Language</string>

    <string name="hint_text">Text to say</string>
    <string name="doubleBackToExit">Press the back button again to exit.</string>
    <string name="networkRequired">Network Connection Required.</string>
    <string name="title_activity_fetch">FetchActivity</string>
</resources>
