<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="@android:dimen/thumbnail_height"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textInputLayout">

        <EditText
                android:id="@+id/textToSay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:maxLines="4"
                android:textColor="@color/colorText"
                android:hint="@string/hint_text"
                android:inputType="textMultiLine"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/referenceTopLeft"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintEnd_toStartOf="@+id/referenceTopRight"
            app:layout_constraintBottom_toTopOf="@+id/referenceBottomLeft" android:layout_marginBottom="32dp"
            tools:visibility="invisible"/>
    <Button
            android:id="@+id/referenceTopRight"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toEndOf="@+id/referenceTopLeft" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/referenceBottomRight" android:layout_marginBottom="32dp"
            tools:visibility="invisible"/>
    <Button
            android:id="@+id/referenceBottomLeft"
            android:layout_width="5dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/referenceTopLeft"
            app:layout_constraintEnd_toStartOf="@+id/referenceBottomRight" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" tools:visibility="invisible"/>
    <Button
            android:id="@+id/referenceBottomRight"
            android:layout_width="5dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/referenceTopRight"
            app:layout_constraintStart_toEndOf="@+id/referenceBottomLeft" android:layout_marginTop="32dp"
            tools:visibility="invisible"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_skip_back"
            android:id="@+id/skipBackImageButton"
            android:background="@drawable/skip_button_round"
            app:layout_constraintEnd_toStartOf="@+id/referenceTopLeft" android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp" app:layout_constraintBottom_toTopOf="@+id/referenceTopLeft"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_skip_forward"
            android:id="@+id/skipForwardImageButton"
            android:background="@drawable/skip_button_round"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@+id/referenceTopRight"
            app:layout_constraintStart_toEndOf="@+id/referenceTopRight" android:layout_marginStart="0dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_play"
            android:id="@+id/playImageButton"
            android:background="@drawable/play_button_round"
            app:layout_constraintBottom_toTopOf="@+id/referenceTopRight"
            app:layout_constraintStart_toEndOf="@+id/skipBackImageButton"
            app:layout_constraintEnd_toStartOf="@+id/skipForwardImageButton" android:layout_marginStart="8dp"
            android:layout_marginBottom="0dp" android:layout_marginEnd="0dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_pause"
            android:id="@+id/pauseImageButton"
            android:background="@drawable/pause_button_round"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/referenceTopLeft" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/stopImageButton"
            app:layout_constraintEnd_toStartOf="@+id/recordImageButton" android:layout_marginEnd="8dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_stop"
            android:id="@+id/stopImageButton"
            android:background="@drawable/stop_button_round"
            app:layout_constraintEnd_toStartOf="@+id/referenceTopLeft"
            android:layout_marginEnd="0dp" app:layout_constraintTop_toBottomOf="@+id/referenceTopLeft"
            android:layout_marginTop="0dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_record"
            android:id="@+id/recordImageButton"
            android:background="@drawable/record_button_round"
            app:layout_constraintTop_toBottomOf="@+id/referenceTopRight"
            app:layout_constraintStart_toEndOf="@+id/referenceTopRight"/>
    <Button
            android:text="@string/button_save"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextButton"
            android:id="@+id/saveButton" app:layout_constraintEnd_toStartOf="@+id/referenceBottomLeft"
            app:layout_constraintBottom_toTopOf="@+id/referenceBottomLeft"/>
    <Button
            android:text="@string/button_fetch"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextButton"
            android:id="@+id/fetchButton" app:layout_constraintStart_toEndOf="@+id/referenceBottomRight"
            app:layout_constraintBottom_toTopOf="@+id/referenceBottomRight"/>
    <Button
            android:text="@string/button_load"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextButton"
            android:id="@+id/loadButton" app:layout_constraintEnd_toStartOf="@+id/fetchButton"
            app:layout_constraintStart_toEndOf="@+id/saveButton"
            app:layout_constraintBottom_toTopOf="@+id/referenceBottomLeft"/>
    <Button
            android:text="@string/button_voice"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextButton"
            android:id="@+id/voiceButton" app:layout_constraintEnd_toStartOf="@+id/referenceBottomLeft"
            app:layout_constraintTop_toBottomOf="@+id/referenceBottomLeft"/>
    <Button
            android:text="@string/button_translate"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextButton"
            android:id="@+id/translateButton"
            app:layout_constraintTop_toBottomOf="@+id/referenceBottomRight"
            app:layout_constraintStart_toEndOf="@+id/referenceBottomRight"/>
    <Button
            android:text="@string/button_language"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextButton"
            android:id="@+id/languageButton" app:layout_constraintEnd_toStartOf="@+id/translateButton"
            app:layout_constraintStart_toEndOf="@+id/voiceButton"
            app:layout_constraintTop_toBottomOf="@+id/referenceBottomRight"/>


</android.support.constraint.ConstraintLayout>